src/silva/ui/static/css/smi.css
* { cursor:default; -webkit-tap-highlight-color: rgba(0,0,0,0); }

html {
  background: #7996ac;
  overflow: hidden;
}

#maintenance {
  position: absolute;
  top: 20%;
  left: 10%;
  width: 80%;
  height: 200px;
  -khtml-box-shadow:#1c2e3d 0 3px 10px;
  -moz-box-shadow:#1c2e3d 0 3px 10px;
  -ms-box-shadow:#1c2e3d 0 3px 10px;
  -o-box-shadow:#1c2e3d 0 3px 10px;
  -webkit-box-shadow:#1c2e3d 0 3px 10px;
  background:#fff;
  bottom:0px;
  box-shadow:#1c2e3d 0 3px 10px;
  cursor: move;
}

#maintenance .message {
  padding: 2em;
}

a {
  text-decoration: none;
  cursor: pointer;
  color: inherit;
}

a ins {
  cursor: pointer;
}
a span {
  cursor: pointer;
}

input, textarea {
  cursor: text;
}

#loading-message {
  display: none;
  padding: 2px 0px;
  position: fixed;
  right: 50%;
  top: 0px;
  z-index: 200;
}

#content-url {
  display: none;
}

div.jGrowl {
  z-index: 13000;
}

div.jGrowl div.error {
  background-color: #cc0000;
}

div.batching a, div.batching span {
  display: block;
  float: left;
  margin: 0 0.25em;
}

div.batching a.previous ins {
  float: left;
  margin-right: 0.2em;
}
div.batching a.next ins {
  float: right;
  margin-left: 0.2em;
}
div.batching a.current {
  font-weight: bold;
}

#main {
  position:absolute;
  top:20px;
  bottom:20px;
  left:20px;
  right:20px;
}

#handle {
  position: absolute;
  top: 46%;
  bottom: 0;
  left: 288px;
  width: 4px;
  height: 40px;
  background-color: #666;
  z-index: 200;
  cursor: move;
  -khtml-box-shadow:#1c2e3d 0 3px 10px;
  -moz-box-shadow:#1c2e3d 0 3px 10px;
  -ms-box-shadow:#1c2e3d 0 3px 10px;
  -o-box-shadow:#1c2e3d 0 3px 10px;
  -webkit-box-shadow:#1c2e3d 0 3px 10px;
  box-shadow:#1c2e3d 0 3px 10px;
  -khtml-border-radius:2px 2px 2px 2px;
  -moz-border-radius:2px 2px 2px 2px;
  -ms-border-radius:2px 2px 2px 2px;
  -o-border-radius:2px 2px 2px 2px;
  -webkit-border-radius:2px 2px 2px 2px;
  border-radius:2px 2px 2px 2px;
}

#workspace {
  -khtml-box-shadow:#1c2e3d 0 3px 10px;
  -moz-box-shadow:#1c2e3d 0 3px 10px;
  -ms-box-shadow:#1c2e3d 0 3px 10px;
  -o-box-shadow:#1c2e3d 0 3px 10px;
  -webkit-box-shadow:#1c2e3d 0 3px 10px;
  background:#fff;
  bottom:0px;
  box-shadow:#1c2e3d 0 3px 10px;
  left:300px;
  position:absolute;
  right:0px;
  top:0px;
}

.focus.highlight {
  outline: 2px #fb0 solid;
}

.message ins.ui-icon {
  float: left;
}
#workspace .header {
  background: url(../img/gradient50.png) repeat-x bottom;
  border-bottom: 1px #999 solid;
  color: #111;
  height: 64px;
  line-height: 24px;
  padding: 0 10px 35px 10px;
}
#workspace .header a {
  color:#111;
}
#workspace .header h2 {
  clear: both;
  font-size:1.3em;
  padding: 8px 0px 8px 0px;
  height:24px;
  overflow:hidden;
  white-space:nowrap;
}
#workspace .header h2 ins.icon {
  background-color:transparent;
  background-image:url(../img/sprite.png);
  background-repeat:no-repeat;
  display:block;
  float:left;
  height:20px;
  margin-right:4px;
  width:20px;
}

#workspace .header .tabs {
  float:left;
  list-style:none;
  margin:0;
  padding:0;
}

#workspace .header .tabs li.top-level {
  border-radius:0 0 3px 3px;
  box-shadow: inset 0 0 2px #aaa;
  -khtml-border-radius:0 0 3px 3px;
  -khtml-box-shadow:inset 0 0 2px #aaa;
  -moz-border-radius:0 0 3px 3px;
  -moz-box-shadow:inset 0 0 2px #aaa;
  -ms-border-radius:0 0 3px 3px;
  -ms-box-shadow:inset 0 0 2px #aaa;
  -o-border-radius:0 0 3px 3px;
  -o-box-shadow:inset 0 0 2px #aaa;
  -webkit-border-radius:0 0 3px 3px;
  -webkit-box-shadow:inset 0 0 2px #aaa;
  position: relative;
  background:url('../img/gradient-tab.png') repeat-x;
  color:#222;
  display:block;
  float:left;
  margin-right: 10px;
  border: 1px solid #777;
  border-top: 0;
}

#workspace .header .tabs a.top-entry {
  display:block;
  height: 26px;
  line-height: 26px;
}

#workspace .header .tabs a.top-entry .subtab-icon {
  float: right;
}
#workspace .header .tabs a.top-entry .subtab-icon ins {
  background: url('../img/arrow-down.png') no-repeat;
  display: block;
  height: 26px;
}
#workspace .header .tabs a.top-label .subtab-icon ins {
  background-position: -8px 0px;
  width: 18px;
}
#workspace .header .tabs a.top-label.active .subtab-icon ins {
  background-position: -8px -25px;
}
#workspace .header .tabs a.top-screen .subtab-icon {
  border-left: 1px solid #555;
}
#workspace .header .tabs a.top-screen .subtab-icon ins {
  background-position: 0px 0px;
  height: 26px;
  width: 26px;
}

#workspace .header .tabs a.top-entry span {
  float: left;
  display: block;
  height: 26px;
  padding: 0px 10px 0px 10px;
}
#workspace .header .tabs a.top-entry.active {
  color: white;
  text-shadow: #373737 1px 1px 1px;
  font-weight: bold;
}
#workspace .header .tabs a.top-screen.active span,
#workspace .header .tabs a.top-label.active {
  background:url('../img/gradient-tab-selected.png') repeat-x;
}


#workspace .header .tabs ol {
  -khtml-border-radius:3px 3px 3px 3px;
  -moz-border-radius:3px 3px 3px 3px;
  -ms-border-radius:3px 3px 3px 3px;
  -o-border-radius:3px 3px 3px 3px;
  -webkit-border-radius:3px 3px 3px 3px;
  position:absolute;
  width: 210px;
  top: 32px;
  left: 0px;
  background:#fff;
  border-radius:3px 3px 3px 3px;
  border:1px #777 solid;
  margin: 0px;
  list-style:none;
  display: none;
  z-index: 100;
}

#workspace .header .tabs ol li {
  border-bottom: 1px solid #eee;
}

#workspace .header .tabs ol li a {
  display: block;
  padding: 0px 5px;
}

#workspace .header .tabs ol li a.active,
#workspace .header .tabs ol li a:hover {
  background-color: #eee;
}

#workspace .header .view-actions {
  margin: 5px 5px 0px 5px;
  float:right;
}
#workspace .header .admin-actions {
  margin: 5px 10px 0px 0px;
}
#workspace .header .admin-actions li a {
  padding: 2px 2px;
}

/* Main working content space */
#workspace .content {
  position: absolute;
  top: 100px;
  bottom: 0;
  left: 0;
  right: 0;
  overflow: hidden;
  overflow-y: auto;
}

/*
 * Dialog disclaimer
 */

.ui-dialog .disclaimer p {
  margin: 0.8em;
}

.ui-dialog .disclaimer li {
  margin: 0.2em;
}

/*
 * Portait mode for iPad removes tree. Or not wide enough
 */
@media screen and (orientation: portrait) {
  #navigation { display:none; }
  #handle {display:none; }
  #workspace { left:0 !important; }
}
@media screen and (max-width: 900px) {
  #navigation { display:none; }
  #handle {display:none; }
  #workspace { left:0 !important; }
}

/*
 * Sprite icons
 */

ins.icon {
  width:20px;
  height:20px;
  display:block;
  float:left;
  background-image:url(../img/sprite.png);
}

ins.loading {
  background:#fff url(../img/loading.gif) no-repeat center center!important;
}


/* Silva Content Types - uses !important to override default jstree-icon */
ins.silva_autotoc { background-position:-100px -40px!important; }
ins.silva_csvsource { background-position:-120px -40px!important; }
ins.silva_document { background-position: 0 -20px!important; }
ins.silva_page { background-position: -20px -20px!important; }
ins.silva_file { background-position:-100px -20px!important; }
ins.silva_find { background-position:-120px -20px!important; }
ins.silva_folder { background-position:-40px -20px!important; }
ins.silva_ghostfolder { background-position:-20px -40px!important; }
ins.silva_ghost { background-position: 0 -40px!important; }
ins.silva_image { background-position:-80px -20px!important; }
ins.silva_indexer { background-position:-40px -40px!important; }
ins.silva_link { background-position:-60px -40px!important; }
ins.silva_permanentredirectlink { background-position:-80px -40px!important; }
ins.silva_publication { background-position:-60px -20px!important; }
ins.silva_root { background-position:-160px -120px!important; }
ins.silva_sourceasset { background-position:-140px -40px!important; }
ins.silva_agendaitem { background-position:-20px -60px!important; }
ins.silva_agendapage { background-position:-40px -60px!important; }
ins.silva_agendafilter { background-position:-120px -60px!important; }
ins.silva_agendaviewer { background-position:-100px -60px!important; }
ins.silva_newsitem { background-position:0 -80px!important; }
ins.silva_newspage { background-position: 0 -60px!important; }
ins.silva_newsfilter { background-position:-80px -60px!important; }
ins.silva_newscategoryfilter { background-position:-160px -60px!important; }
ins.silva_newsviewer { background-position:-60px -60px!important; }
ins.silva_newspublication { background-position:-160px -40px!important; }
ins.silva_rssaggregator { background-position:-140px -60px!important; }


/* Silva publication states */
ins.state { width:10px!important; height:10px!important; }
ins.state.draft { background-position:-5px -105px; }
ins.state.pending { background-position:-25px -105px; }
ins.state.approved { background-position:-45px -105px; }
ins.state.published { background-position:-65px -105px; }
ins.state.closed { background-position:-85px -105px; }

/* jquery ui overrides */

body .ui-state-default,
body .ui-state-active {
  background: inherit;
  color: inherit;
  border: inherit;
}

body .ui-widget {
  font-family: sans-serif;
  font-size: inherit;
}

body .ui-widget .ui-button-text {
  line-height: inherit;
}

body .upload-file .upload-progress {
  width: 200px;
  height: 10px;
}

